#3 display server side validation messages in UI

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -107,6 +107,10 @@
                     	<form novalidate class="createLdForm" name="LdCreateForm" ng-submit="submitLD()">
                          <div class="modal-body">
 
+                         	<div id="ldCreateErrors" ng-show="ldCreateErrors" class="alert alert-error">
+                           		{{ ldCreateErrors }}
+                			</div>
+
                          	<!-- Name -->
                             <div class="formLevel">
                                 <div class="errorBox">
