#3 change cancel button to link so it doesn't submit the form

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -269,7 +269,7 @@
                 
                             </div>
 			                <div class="modal-footer">
-			                    <button id="cancelCreateLd" class="btn btnFormCancel" ng-click="closeLD()">Cancel</button>
+			                    <a id="cancelCreateLd" class="btn btnFormCancel" ng-click="closeLD()">Cancel</a>
 			                    <button id="confirmCreateLD" type="submit" class="btn btnForm " ng-disabled="LdCreateForm.$invalid">Create</button>
 			                </div>
                     	</form>
