--- a/client/views/partials/ldedit.html
+++ b/client/views/partials/ldedit.html
@@ -143,7 +143,7 @@
                     <label class="editLabel"><i class="icon-book icon-white"></i> Design name: </label>
                     <input class="editInputName" type="text"
                                                                 placeholder="{{ learningDesign.ld_name }}" name="ldName"
-                                                                ng-model="ldName" required
+                                                                ng-model="learningDesign.ld_name" required
                                                                 ng-maxlength="50"
                                                                 ng-pattern="/^[a-zA-Z0-9.,!?:;... òàùèéì/'/-//@#*]+$/">
 
