#3 e2e verify ld scope binding on ld edit page

--- a/client/views/partials/ldedit.html
+++ b/client/views/partials/ldedit.html
@@ -170,7 +170,7 @@
                 <form name="ScopeForm" novalidate="" class="singleForm">
                     <div >
                         <label class="editLabel"><i class="icon-bell icon-white"></i> Scope:</label>
-                        <input class="editInputScocpe" type="text" name="ldScope" ng-model="ldScope"
+                        <input class="editInputScocpe" type="text" name="ldScope" ng-model="learningDesign.ld_scope"
                                placeholder=" {{ learningDesign.ld_scope }}" required ng-maxlength="50"
                                ng-pattern="/^[a-zA-Z0-9.,:;... òàùèéì/'/-//@#*]+$/">
                         <div class="errorBoxTab">
