--- a/client/views/index.html
+++ b/client/views/index.html
@@ -114,9 +114,9 @@
                          	<!-- Name -->
                             <div class="formLevel">
                                 <div class="errorBox">
-                                    <span class="errorTipModal" ng-show="LdCreateForm.ldName.$dirty && LdCreateForm.ldName.$error.required">Required!</span>
-                                    <span id="ldNamePatternError" class="errorTipModal" ng-show="LdCreateForm.ldName.$error.pattern">The design name cannot contain this symbol.</span>
-                                    <span id="ldNameLengthError" class="errorTipModal" ng-show="LdCreateForm.ldName.$error.maxlength">The design name cannot be longer than 50 characters.</span>
+                                    <span id="ldNameReqErr" class="errorTipModal" ng-show="LdCreateForm.ldName.$dirty && LdCreateForm.ldName.$error.required">Required!</span>
+                                    <span id="ldNamePatternErr" class="errorTipModal" ng-show="LdCreateForm.ldName.$error.pattern">The design name cannot contain this symbol.</span>
+                                    <span id="ldNameLengthErr" class="errorTipModal" ng-show="LdCreateForm.ldName.$error.maxlength">The design name cannot be longer than 50 characters.</span>
                                 </div>
                                 <label class="formLabel"><i class="icon-book"></i> Design Name*:</label>
                                 <input class="formInput" type="text" name="ldName" ng-model="ldName" required ng-maxlength="50" ng-pattern="/^[a-zA-Z0-9.,!?:;... òàùèéì/'/-//@#*]+$/">
@@ -142,9 +142,9 @@
                             <!-- Scope -->
                             <div class="formLevel">
                                 <div class="errorBox">
-                                    <span class="errorTipModal" ng-show="LdCreateForm.ldScope.$dirty && LdCreateForm.ldScope.$error.required">Required!</span>
-                                    <span id="ldScopePatternError" class="errorTipModal" ng-show="LdCreateForm.ldScope.$error.pattern">The design scope cannot contain this symbol.</span>
-                                    <span id="ldScopeLengthError" class="errorTipModal" ng-show="LdCreateForm.ldScope.$error.maxlength">The design scope cannot be longer than 50 characters.</span>
+                                    <span id="ldScopeReqErr" class="errorTipModal" ng-show="LdCreateForm.ldScope.$dirty && LdCreateForm.ldScope.$error.required">Required!</span>
+                                    <span id="ldScopePatternErr" class="errorTipModal" ng-show="LdCreateForm.ldScope.$error.pattern">The design scope cannot contain this symbol.</span>
+                                    <span id="ldScopeLengthErr" class="errorTipModal" ng-show="LdCreateForm.ldScope.$error.maxlength">The design scope cannot be longer than 50 characters.</span>
                                     <span class="clearfix"></span>
                                 </div>
                                 <label class="formLabel"><i class="icon-bell"></i> Design Scope*:</label>
@@ -157,9 +157,9 @@
                             <!-- Topics -->
                             <div class="formLevel">
                                 <div class="errorBox">
-                                    <span class="errorTipModal" ng-show="LdCreateForm.ldTopic.$dirty && LdCreateForm.ldTopic.$error.required">Required!</span>
-                                    <span id="topicPatternError" class="errorTipModal" ng-show="LdCreateForm.ldTopic.$error.pattern">A topic cannot contain this symbol.</span>
-                                    <span id="topicLengthError" class="errorTipModal" ng-show="LdCreateForm.ldTopic.$error.maxlength">A topic cannot be longer than 255 characters.</span>
+                                    <span id="topicReqErr" class="errorTipModal" ng-show="LdCreateForm.ldTopic.$dirty && LdCreateForm.ldTopic.$error.required">Required!</span>
+                                    <span id="topicPatternErr" class="errorTipModal" ng-show="LdCreateForm.ldTopic.$error.pattern">A topic cannot contain this symbol.</span>
+                                    <span id="topicLengthErr" class="errorTipModal" ng-show="LdCreateForm.ldTopic.$error.maxlength">A topic cannot be longer than 255 characters.</span>
                                     <span class="clearfix"></span>
                                 </div>
                                 <label class="formLabel"><i class="icon-map-marker"></i> Topics*:</label>
@@ -184,9 +184,9 @@
                             <!-- Objectives -->
                             <div class="formLevel">
                                 <div class="errorBox">
-                                    <span class="errorTipModal" ng-show="LdCreateForm.ldObjective.$dirty && LdCreateForm.ldObjective.$error.required">Required!</span>
-                                    <span id="objectivePatternError" class="errorTipModal" ng-show="LdCreateForm.ldObjective.$error.pattern">An objective cannot contain this symbol.</span>
-                                    <span id="objectiveLengthError" class="errorTipModal" ng-show="LdCreateForm.ldObjective.$error.maxlength">An objective cannot be longer than 255 characters.</span>
+                                    <span id="objectiveReqErr" class="errorTipModal" ng-show="LdCreateForm.ldObjective.$dirty && LdCreateForm.ldObjective.$error.required">Required!</span>
+                                    <span id="objectivePatternErr" class="errorTipModal" ng-show="LdCreateForm.ldObjective.$error.pattern">An objective cannot contain this symbol.</span>
+                                    <span id="objectiveLengthErr" class="errorTipModal" ng-show="LdCreateForm.ldObjective.$error.maxlength">An objective cannot be longer than 255 characters.</span>
                                     <span class="clearfix"></span>
                                 </div>
                             <label class="formLabel"><i class="icon-screenshot"></i> Objectives*:</label>
@@ -210,8 +210,8 @@
                     		<!-- Pre-requisites -->
 		                    <div class="formLevel">
 		                        <div class="errorBox">
-		                            <span id="prereqPatternError" class="errorTipModal" ng-show="LdCreateForm.ldRequisite.$error.pattern">A pre-requisite cannot contain this symbol.</span>
-		                            <span id="prereqLengthError" class="errorTipModal" ng-show="LdCreateForm.ldRequisite.$error.maxlength">A pre-requisite cannot be longer than 255 characters.</span>
+		                            <span id="prereqPatternErr" class="errorTipModal" ng-show="LdCreateForm.ldRequisite.$error.pattern">A pre-requisite cannot contain this symbol.</span>
+		                            <span id="prereqLengthErr" class="errorTipModal" ng-show="LdCreateForm.ldRequisite.$error.maxlength">A pre-requisite cannot be longer than 255 characters.</span>
 		                        </div>
 		                        <label class="formLabel"><i class="icon-backward"></i> Pre-Requisites:</label>
 		                        <input class="formInput" type="text" name="ldRequisite" ng-model="ldRequisite"
@@ -235,17 +235,15 @@
 		                    <!-- Students Description -->
 		                    <div class="formLevel">
 		                        <div class="errorBox">
-		                            <span class="errorTipModal" ng-show="LdCreateForm.ldStudentsDescr.$dirty && LdCreateForm.ldStudentsDescr.$error.required">Required!</span>
-                                    <span id="ldStudentDescrPatternError" class="errorTipModal" ng-show="LdCreateForm.ldStudentsDescr.$error.pattern">Students' description cannot contain this symbol.</span>
-		                            <span id="ldStudentDescrLengthError" class="errorTipModal" ng-show="LdCreateForm.ldStudentsDescr.$error.maxlength">Students' description cannot be longer than 500 characters.</span>
+		                            <span id="studentsDescrReqErr" class="errorTipModal" ng-show="LdCreateForm.ldStudentsDescr.$dirty && LdCreateForm.ldStudentsDescr.$error.required">Required!</span>
+                                    <span id="ldStudentDescrPatternErr" class="errorTipModal" ng-show="LdCreateForm.ldStudentsDescr.$error.pattern">Students' description cannot contain this symbol.</span>
+		                            <span id="ldStudentDescrLengthErr" class="errorTipModal" ng-show="LdCreateForm.ldStudentsDescr.$error.maxlength">Students' description cannot be longer than 500 characters.</span>
 		                        </div>
 		                        <label class="formLabel"><i class="icon-user"></i> Students' Description*:</label>
 		                        <textarea class="formInput" name="ldStudentsDescr" ng-model="ldStudentsDescr" required="" rows="4" ng-maxlength="500"  ng-pattern="/^[a-zA-Z0-9.,:;... òàùèéì/'/-//@#*]+$/"></textarea>
 		                        <span class="clearfix"></span>
 		                    </div>
 
-
-                
                             </div>
 			                <div class="modal-footer">
 			                    <a id="cancelCreateLd" class="btn btnFormCancel" ng-click="closeLD()">Cancel</a>
