#3 work in progress on e2e to verify typeahead

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -140,7 +140,7 @@
                             </div>
 
                             <!-- Scope -->
-                            <div class="formLevel">
+                            <div id="scopeSection" class="formLevel">
                                 <div class="errorBox">
                                     <span id="ldScopeReqErr" class="errorTipModal" ng-show="LdCreateForm.ldScope.$dirty && LdCreateForm.ldScope.$error.required">Required!</span>
                                     <span id="ldScopePatternErr" class="errorTipModal" ng-show="LdCreateForm.ldScope.$error.pattern">The design scope cannot contain this symbol.</span>
