#3 e2e verify topic typeahead

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -155,7 +155,7 @@
                             </div>
 
                             <!-- Topics -->
-                            <div class="formLevel">
+                            <div id="topicSection" class="formLevel">
                                 <div class="errorBox">
                                     <span id="topicReqErr" class="errorTipModal" ng-show="LdCreateForm.ldTopic.$dirty && LdCreateForm.ldTopic.$error.required">Required!</span>
                                     <span id="topicPatternErr" class="errorTipModal" ng-show="LdCreateForm.ldTopic.$error.pattern">A topic cannot contain this symbol.</span>
