--- a/client/css/app.css
+++ b/client/css/app.css
@@ -128,9 +128,14 @@ a:hover {
 #sidebar {
     background-color: #FFF;
     border: 6px solid #990000;
-    border-radius: 6px;
     padding: 10px;
     min-height: 350px;
+    border-radius: 10px;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -webkit-box-shadow: 0 3px 3px #CCCCCC;
+    -moz-box-shadow: 0 3px 3px #CCCCCC;
+    box-shadow: 0 3px 3px #CCCCCC;
 }
 
 #sidebarHeader {
@@ -292,18 +297,20 @@ a:hover {
 }
 
 #contentHeader {
-    margin: 5px 5px;
+    margin: 5px;
     min-height: 20px;
-    padding: 5px 10px;
+    padding: 10px 10px;
     background-color: #0099CC;
     color: #FFFFFF;
-    border: 1px dashed #FFFFFF;
     text-align: center;
+    border-radius: 10px;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
 }
 
 #contentHeader h4 {
-    margin: 0;
-    width: 100%;
+    margin: 0 auto;
+    width: 98%;
 
 }
 
@@ -909,6 +916,8 @@ input.formInputDuration[type=number]::-webkit-inner-spin-button:after {
     color: #990000;
     padding: 3px;
     border-radius: 4px;
+    border: 1px dashed #0099CC;
+    margin: 5px auto;
 
 }
 
@@ -931,7 +940,7 @@ input.formInputDuration[type=number]::-webkit-inner-spin-button:after {
 }
 
 .tabContent {
-    margin: -25px 0 0 0;
+    margin: 0 0 0 0;
     text-align: center;
 
     border: 1px solid #CCCCCC;
@@ -941,7 +950,7 @@ input.formInputDuration[type=number]::-webkit-inner-spin-button:after {
     border-radius: 0 0 6px 6px;
     -webkit-border-radius: 0 0 6px 6px;
     border-top: none;
-    padding: 25px 0 0 0;
+    padding:  5px 0 0 0;
 }
 
 .actBox {
@@ -1978,33 +1987,39 @@ input.searchBoxInput {
 }
 
 .ld-border {
-    border-radius: 6px;
-    -moz-border-radius: 6px;
-    -webkit-border-radius: 6px;
-    border: 2px solid #FFFFFF;
-    padding: 5px 10px 5px 10px;
+    border-radius: 18px;
+    -moz-border-radius: 18px;
+    -webkit-border-radius: 18px;
+    border: 6px solid #FFFFFF;
+    padding: 5px 8px 5px 8px;
     margin: 0 1% 20px auto;
     background-color: #0099CC;
     width: 22%;
-    min-width: 200px;
+    min-width: 180px;
     float: left;
     color: #FFFFFF;
     height: 180px;
+    -webkit-box-shadow: 0 3px 3px #CCCCCC;
+    -moz-box-shadow: 0 3px 3px #CCCCCC;
+    box-shadow: 0 3px 3px #CCCCCC;
+;
 }
 
 
 
 .ld-center {
+    border-radius: 10px;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
     margin: 10px auto 5px auto;
     height: 135px;
     width: 95%;
     background-color: #FFFFFF;
     border: 1px dashed #0099CC;
-    padding: 0;
-}
+padding: 0}
 
 .ld-bottom {
-    margin: 5px auto 0 auto;
+    margin: 5px 10px 0 auto;
 
 }
 
@@ -2121,9 +2136,9 @@ border: 1px solid #0099CC;
     color: #990000;
 }
 
-.ld-name-text:hover {
+.ld-border:hover {
     text-decoration: none;
-    text-shadow: 0 -1px 1px #CCC, 0 1px 1px #999;
+    text-shadow: 0 1px 2px #CCC;
 
 }
 
@@ -2151,7 +2166,7 @@ border: 1px solid #0099CC;
     }
 
     .ld-border {
-        width: 20%;
+        width: 21%;
     height: 195px;
     }
 
@@ -2359,6 +2374,10 @@ border: 1px solid #0099CC;
 
     .btnTitle {
         min-width: 35%;
+    }
+
+    .ld-border {
+        width: 27%;
     }
 
 }
