#31 fixed problem with typeahead validation, removing validation of first character

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -165,7 +165,7 @@
                                        typeahead-on-select="addTopicFromSuggestion()"
                                        ui-keypress="{13:'addTopicFromUserInput($event)'}"
                                        placeholder="Topics..." required ng-maxlength="255"
-                                       ng-pattern="/^[A-Za-z0-9][A-Za-z-9, +-_&#'&quot;òàùèéì@#*]*$/">
+                                       ng-pattern="/^[A-Za-z-9, +-_&#'&quot;òàùèéì@#*]+$/">
                                 <span class="clearfix"></span>
 
                                 <div class="formTag">
@@ -192,7 +192,7 @@
                                    typeahead-on-select="addObjectiveFromSuggestion()"
                                    ui-keypress="{13:'addObjectiveFromUserInput($event)'}"
                                    placeholder="Objectives..." required ng-maxlength="255"
-                                   ng-pattern="/^[A-Za-z0-9][A-Za-z-9, +-_&#'&quot;òàùèéì@#*]*$/">
+                                   ng-pattern="/^[A-Za-z-9, +-_&#'&quot;òàùèéì@#*]+$/">
                             <span class="clearfix"></span>
 
                             <div class="formTag">
@@ -216,7 +216,7 @@
                                        typeahead-on-select="addPrerequisiteFromSuggestion()"
                                        ui-keypress="{13:'addPrerequisiteFromUserInput($event)'}"
 		                               placeholder="Prerequisites..."  ng-maxlength="255"
-                                       ng-pattern="/^[A-Za-z0-9][A-Za-z-9, +-_&#'&quot;òàùèéì@#*]*$/">
+                                       ng-pattern="/^[A-Za-z-9, +-_&#'&quot;òàùèéì@#*]+$/">
 		                        <span class="clearfix"></span>
 
 		                        <div class="formTag">
