#3 e2e verify topic tags

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -168,7 +168,7 @@
                                        ng-pattern="/^[a-zA-Z0-9.,!?:;... òàùèéì/'/-//@#*]+$/">
                                 <span class="clearfix"></span>
 
-                                <div class="formTag">
+                                <div id="topicTags" class="formTag">
                                     <ul ng-repeat="topic in selectedTopics" class="zeroMargin subjects">
                                         <li class="modalEditItem"><span class="modalEditItemLink">{{topic}} <a
                                                 ng-href="#"><i
